--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     justify-content: center;
     padding: 0;
+    font-family: 'Bebas Neue', cursive;
 }
 
 main {
@@ -19,7 +20,6 @@ main {
 h1 {
     color: rgb(221, 221, 221);
     font-size: 10vw;
-    font-family: fantasy;
     margin: 0;
     padding: 0;
 }
